tests/basic/if/let_if_02.pan

f60 : {v:int|v=2}
f60 = let b = true in if b then 1 else 2

f61 : {v:int|v=1}
f61 = let b = false in if b then 1 else 2


f70 : {v:int|false}
f70 = let b = true in if b then 1 else 2

f71 : {v:int|false}
f71 = let b = false in if b then 1 else 2
